2nd attempt of fixing background cover on mobile

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -12,8 +12,9 @@ $background-opacity: 0.8;
   @if $show-home-image {
     &#bg-img {
       background: $home-image;
+      background-repeat: no-repeat;
       background-attachment: fixed;
-      background-size: 100% 100%;
+      background-size: cover;
 
       &:after {
         content: "";
